--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -1955,7 +1955,7 @@ main .container {
         }
         
         .modal-dialog {
-            max-width: 800px;
+            max-width: 600px;
             margin: auto;
         }
         
@@ -1977,6 +1977,7 @@ main .container {
             font-family: "Fredoka", sans-serif;
             color: #000;
             font-size: 24px;
+            font-weight: 700;
         }
         
         .modal-header-btn {
@@ -2001,7 +2002,6 @@ main .container {
             border: 1.5px solid #004a53;
             display: flex;
             flex-direction: column;
-            gap: 10px;
             padding: 0px 27px 24px;
             border-radius: 15px;
             position: relative;
@@ -2022,6 +2022,7 @@ main .container {
             border: none;
             font-size: 14px;
             color: #aebaca;
+            padding: 0;
         }
         
         .modal-form-btn {
