--- a/public/css/style.css
+++ b/public/css/style.css
@@ -232,6 +232,10 @@ a.nav-link.active {
   border-radius: 10px;
 }
 
+.product-section-bordered-red{
+  border: 2px solid #F56824;
+}
+
 .product-button {
   background-color: #004A53;
   color: var(--color-secondary-button);
