--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1430,6 +1430,13 @@ footer p {
 .modal-dialog{
   max-width: 60vw;
 }
+
+@media screen and (max-width: 1000px) {
+  .modal-dialog {
+    max-width: 100vw; /* full width */
+    margin: 0; /* remove side margins */
+  }}
+
 .modal-content{
   padding: 0;
   border-radius: 30px;
