--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -880,7 +880,6 @@ footer p {
 
 .modal input {
   border-radius: 6px;
-  padding: 10px;
 }
 
 .proceed-btn {
@@ -1591,7 +1590,6 @@ label{
 }
 .form-btn{
       height: 60px;
-      width: 259px;
       background-color: #FDAF22;
       color: #311507;
       border-radius: 4px;
@@ -1675,6 +1673,18 @@ div.contact-container a{
 }
 .accordion-button::before{
     display: none;
+}
+.accordion-button::after,
+.accordion-button:not(.collapsed)::after {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='white' viewBox='0 0 16 16'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  filter: none !important; /* disable Bootstrap’s tinting */
+}
+
+.accordion-button::after {
+  filter: invert(1); /* simple way to turn it white if background is dark */
+}
+.accordion-button:not(.collapsed)::after {
+  filter: invert(1);
 }
 
 .accordion-item.faq-item-container {
