--- a/resources/css/responsiveness.css
+++ b/resources/css/responsiveness.css
@@ -14,6 +14,35 @@
   .heroparagraph {
     font-size: 12px;
   }
+
+   h1 {
+  font-size: clamp(1.75rem, 5vw, 2rem);
+}
+
+h2 {
+  font-size: clamp(1.6rem, 4vw, 1.5rem);
+}
+
+h3 {
+  font-size: clamp(1.55rem, 3vw, 1.4rem);
+}
+
+h4 {
+  font-size: clamp(1.35rem, 2.5vw, 1.2rem);
+}
+
+h5 {
+  font-size: clamp(1.25rem, 2vw, 1rem);
+}
+
+h6 {
+  font-size: clamp(1.125rem, 1.5vw, 0.8rem);
+}
+
+p {
+  font-size: clamp(1rem, 1.2vw, 0.7rem);
+  line-height: 1.6;
+}
 }
 
 /* Small Devices (max-width: 320px) */
@@ -114,6 +143,11 @@
 
 .product-button-yellow {
   width: 70%;
+}
+
+.ourproduct2 {
+  border-radius: 30px;
+  padding: 1.5rem;
 }
 
 }
@@ -295,34 +329,41 @@
     width: 40%;
     padding: 1rem;
   }
+  .hero_header{
+    min-height: 140px;
+  }
 
  h1 {
-  font-size: clamp(1.75rem, 5vw, 3rem);
+  font-size: clamp(2rem, 5vw, 3rem);
 }
 
 h2 {
-  font-size: clamp(1.5rem, 4vw, 2.5rem);
+  font-size: clamp(1.75rem, 4vw, 2.5rem);
 }
 
 h3 {
-  font-size: clamp(1.25rem, 3vw, 2rem);
+  font-size: clamp(1.65rem, 3vw, 2rem);
 }
 
 h4 {
-  font-size: clamp(1.125rem, 2.5vw, 1.75rem);
+  font-size: clamp(1.45rem, 2.5vw, 1.75rem);
 }
 
 h5 {
-  font-size: clamp(1rem, 2vw, 1.5rem);
+  font-size: clamp(1.35rem, 2vw, 1.5rem);
 }
 
 h6 {
-  font-size: clamp(0.875rem, 1.5vw, 1.25rem);
+  font-size: clamp(1.45rem, 1.5vw, 1.25rem);
 }
 
 p {
-  font-size: clamp(0.875rem, 1.2vw, 1.125rem);
+  font-size: clamp(1.25rem, 1.2vw, 1.125rem);
   line-height: 1.6;
+}
+
+.modal-footer{
+    height : 64px;
 }
 
 
